--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,79 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.bg-primary{
+    @apply bg-white dark:bg-slate-800
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.project-card{
+    @apply flex flex-col m-3  rounded-xl w-full
+            transition duration-300 transform border border-gray-300
+            hover:scale-105 
+            hover:shadow-lg
+            dark:border-gray-200/50
+            dark:hover:shadow-gray-400/40
+
+            hover:text-blue-600
+
+
+}
+.detail-card{
+    @apply   rounded-xl w-auto
+            
+            bg-white
+            dark:bg-slate-800
+  
+
 }
 
-* {
-  box-sizing: border-box;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.wrapper {
+    height: 20vh;
+    /*This part is important for centering*/
+    display: grid;
+    place-items: center;
+    font-family: monospace;
   }
-  body {
-    color: white;
-    background: black;
+
+  .blinking-cursor::after{
+    content: '|';
+    animation: blink 1s step-start infinite;
+  
   }
+  @keyframes blink{
+    50%{
+      opacity: 0%;
+    }
+  }
+
+.active{
+    @apply opacity-100
+            hover:opacity-80
+            dark:text-slate-50
+
+}
+
+.not-active{
+
+}
+
+
+h1, h2, h3, h4, h5, h6{
+    @apply text-slate-900 dark:text-white
+}
+
+
+footer{
+    @apply text-gray-600 bg-gray-100 dark:bg-slate-600/20
+}
+
+a{
+    @apply text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-50
+}
+
+
+p{
+    @apply text-slate-500 dark:text-slate-400
 }
